cluster/media/plex/resources/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex-http
  namespace: media
spec:
  hostnames:
    - abraxis.tv
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external-gateway
      namespace: networking
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: plex
          port: 32400
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
