cluster/media/plex/resources/tcp-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: plex-tcp
  namespace: media
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external-gateway
      namespace: networking
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: plex
          port: 32400
          weight: 1
